# whisper-to-me

./: .gitignore  CLAUDE.md  PHASE4-PLAN.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/commands/: bench.md  e2e-test.md
.github/workflows/: ci.yml
desktop/: bundle-install.sh  gen_icons.py  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: daemon.rs  lib.rs  main.rs  prompt.rs  tray.rs
docs/: architecture.md  features.md  meeting-detection.md
src/whisper_to_me/: __init__.py  audio.py  briefs.py  chat.py  cli.py  config.py  dedup.py  diarize.py  echo_cancel.py  export.py  followup.py  notes.py  notion_export.py  runner.py  search.py  server.py  session.py  summarize.py  system_audio_tap.swift  templates.py  transcribe.py  watch.py
src/whisper_to_me/static/: app.js  index.html  prompt.html  style.css
src/whisper_to_me/templates/: brainstorm.md  default.md  interview.md  one-on-one.md  sales-call.md  standup.md
tests/: conftest.py  test_api.py  test_briefs.py  test_chat.py  test_config.py  test_diarize.py  test_export.py  test_followup.py  test_notes.py  test_notion.py  test_search.py  test_summarize_notes.py  test_templates.py  test_watch_prompt.py
webui/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  index.css  legacy.css  store.ts  ws.ts
webui/src/api/: client.ts  events.ts  types.ts
webui/src/components/: ChatView.tsx  ConfirmDialog.tsx  DaemonDown.tsx  EditorToolbar.tsx  (+12 more)
(+2 files in other folders)
